added code for loading image

--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
             </div>
              </form>
              <!--Loader-->
-             <!--<div id="loading">
+             <div id="loading">
                <img src="img/loading.gif" alt="">
-             </div>-->
+             </div>
              <!--Results-->
              <div id="results">
                <h5>Results</h5>
